# Multi-phenotype-morphometry

./: .gitignore  LICENSE  README.md  cca.py  machine_learning.py  pareto.py  pyproject.toml  requirements.txt  univariate.py
examples/: example_cca.py  example_convergence.py  example_correlation.py  example_machine_learning.py  example_network.py  example_regional.py
mpm/: cca.py  machine_learning.py  pareto.py  univariate.py
