[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-phenotype-morphometry"
version = "0.1.0"
description = "Methods and synthetic examples accompanying article Regional, functional and transcriptomic decoding of multidimensional brain structure alterations in obsessive-compulsive disorder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "neuroCombat>=0.2.12",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
include = ["mpm", "mpm.*"]

